--- a/bale/settings.properties
+++ b/bale/settings.properties
@@ -1,4 +1,5 @@
 #
-#Fri Dec 30 19:37:38 CET 2022
-language=en_US
-theme=darcula
+#Fri Jan 06 15:07:58 CET 2023
+language=de_DE
+loglevel=1
+theme=default
