--- a/bale.yml
+++ b/bale.yml
@@ -117,6 +117,7 @@ dependencies:
   - pip=23.0.1=pyhd8ed1ab_0
   - platformdirs=3.1.1=pyhd8ed1ab_0
   - pooch=1.7.0=pyhd8ed1ab_0
+  - psutil=5.9.5=py39ha55989b_0
   - py-opencv=4.6.0=haa95532_3
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
@@ -200,4 +201,5 @@ dependencies:
       - protobuf==3.20.3
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
-prefix: D:\Users\falte\anaconda3\envs\bale2
+      - screeninfo==0.8.1
+prefix: D:\Users\falte\anaconda3\envs\bale
